# pkg/api/presenters/adapter_status.go
@@ -143,6 +143,7 @@ func PresentAdapterStatus(adapterStatus *api.AdapterStatus) (openapi.AdapterStat
 		Conditions:         openapiConditions,
 		CreatedTime:        adapterStatus.CreatedTime,
 		Data:               &data,
+		DeletedAt:          adapterStatus.DeletedAt,
 		LastReportTime:     adapterStatus.LastReportTime,
 		Metadata:           openapiMetadata,
 		ObservedGeneration: adapterStatus.ObservedGeneration,
