# pkg/api/presenters/node_pool.go
@@ -100,6 +100,7 @@ func PresentNodePool(nodePool *api.NodePool) (openapi.NodePool, error) {
 	result := openapi.NodePool{
 		CreatedBy:   toEmail(nodePool.CreatedBy),
 		CreatedTime: nodePool.CreatedTime,
+		DeletedAt:   nodePool.DeletedAt,
 		Generation:  nodePool.Generation,
 		Href:        &href,
 		Id:          &nodePool.ID,
